--- a/gb/19/9/23/n11539938.md
+++ b/gb/19/9/23/n11539938.md
@@ -16,37 +16,35 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/19/n11462652.md#1">五个月遭遇两次遭窃 墨尔本东区一家庭受惊吓</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/19/n11462671.md#1">真心想去监狱 墨尔本男子手持餐刀抢劫</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/27/n11479839.md#1">犯罪团伙频繁盗取奶粉 涉案金额高达50余万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14261833.md#1">维州政府Covid秘密文件将被公开</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261537.md#1">警察总长：国会议员面临越来越多的安全威胁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261539.md#1">坐拥维州17套房 墨尔本女子置业有方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261525.md#1">维州电动滑板车骑手受伤病例激增</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261358.md#1">外国罪犯获宽宥 澳反对党要求解雇移民部长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261364.md#1">澳山羊肉产量创历史新高 美中为最大出口市场</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544163.md#1">最新调查：维州超三成年轻司机常超速</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544160.md#1">义演时爱侣遗物被盗 墨尔本女歌手意外寻回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544158.md#1">墨尔本Clayton车站将建数百套新房</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544591.md#1">数百万澳人靠遗产实现财务目标 专家警示风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544564.md#1">澳总理：政府应在经济发展中退居次位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544586.md#1">专家称7月份房贷利率下调“已成定局”</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/15/n9959300.md#1" target="_blank">文革中自杀的几个名人（4）史学家翦伯赞</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/3/n14239818.md#1">苏轼相交一世的表亲知己：墨竹画家文同</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258805.md#1">【未解之谜】遇难总能呈祥？盘点蒋介石身边的那些高人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/22/n14255214.md#1">一个空间通连两个时空 奇特梦境竟然真实不虚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/23/n14256005.md#1">迟到了半个世纪的“毕业纪念册”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/26/n14258095.md#1">【庆祝5·13】普天敬颂谢师恩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261285.md#1">【远见快评】刘源被查上交20亿 红二代给习下套</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260590.md#1">【全球新闻】美总统首例 川普34项罪名成立</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260400.md#1">辞高薪工作 美国妈妈改做副业 年赚37.9万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260566.md#1">世界最高的烂尾楼？天津117大厦引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260490.md#1">三中全会前中共五常委接见警察 被指气氛紧张</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260343.md#1">《庆余年2》爆红 张若昀唐艺昕爱情秘辛曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14261029.md#1">蔡少芬趁低价购香港豪宅 原业主7年亏近千万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260405.md#1">主打吴孟达遗作画面却不到1分钟 片方遭痛批</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14261083.md#1">演员杜旭东被爆为电诈拍广告 涉案金额上亿元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260387.md#1">周星驰首部微短剧爽约 或与广电总局新规有关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260000.md#1">专家警告 别用白醋和小苏打粉疏通堵塞水管</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260340.md#1">营养师：这些是商店货架上最健康的奶制品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/25/n14257434.md#1">82岁工作仍精力充沛 日营养师47年吃1种长寿食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14256815.md#1">突然手脚发麻？小心是先兆！7食物清血管防中风</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260691.md#1">这9个无心的习惯会偷偷消耗你的能量</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543287.md#1">综艺《出去一下》将开播 舒华、桂纶镁同台亮相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539895.md#1">强化免疫有三关 中医从脏腑打造防御屏障</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/23/n11539938.htm">老夫妻房内熟睡 小偷逍遥入室行窃喝橙汁</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/19/9/23/n11539938.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
